<resources>
    <string name="app_name">What The Pass</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Master Password</string>
    <string name="action_login">Local Login</string>
    <string name="action_signin">Local Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">OR</string>
    <string name="login_google">Sign in with Google</string>
    <string name="title_activity_view_pass_and_files">ViewPassAndFilesActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_name">Input Name*</string>
    <string name="create_password_input">Create password input</string>
    <string name="password_input">Password*</string>
    <string name="url">URL</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="password_input_detail">Password Input Detail</string>
    <string name="default_text">Default text</string>
    <string name="input_email">Input email</string>
    <string name="input_name_label">Input name</string>
    <string name="input_password">Input password</string>
    <string name="uri">URI</string>
    <string name="edit_password_input">Edit password input</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="passwords">Passwords</string>
    <string name="files">Files</string>
    <string name="input_username">Input username</string>
    <string name="copybutton">copyButton</string>
    <string name="viewbutton">viewButton</string>
    <string name="title_activity_password_generator">PasswordGeneratorActivity</string>
    <string name="lengthPasswordGenerated">Length</string>
    <string name="optionsAZInsert">A-Z</string>
    <string name="optionsazInsert">a-z</string>
    <string name="optionsNumericInsert">0-9</string>
    <string name="optionsSpecialInsert">!@#$%^*</string>
    <string name="minNumChars">Minimum numeric characters</string>
    <string name="minSpecialChars">Minimum special characters</string>
    <string name="generateNewPassword">Generate password</string>
    <string name="copyPasswordGenerated">Copy password</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="edit_input_password">Edit Input Password</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="passwordbreachbutton">passwordBreachButton</string>
    <string name="exposed">Exposed?</string>
    <string name="default_number_one">1</string>
    <string name="password_info">Password Info</string>
    <string name="default_fifteen">15</string>
    <string name="default_zero">0</string>
    <string name="logout">Log Out</string>
    <string name="password_generator">Password Generator</string>
    <string name="settings">Settings</string>
    <string name="passwordname">PasswordName</string>
    <string name="passwordurl">PasswordURL</string>
    <string name="deleteAccount">Delete What The Pass Account</string>
    <!--<string name="default_web_client_id">1045075503912-bj3e708qih47fg0abmjnqgosdijcjok4.apps.googleusercontent.com</string> -->
</resources>