<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.passwordGeneration.PasswordGeneratorFragment">

    <ProgressBar
        android:id="@+id/exposedProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="31dp"
        android:layout_marginBottom="108dp"
        android:indeterminateTint="@color/secondary_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/generatedPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/copyGeneratedPassword"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/copyPasswordGenerated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateNewPassword" />

    <Button
        android:id="@+id/exposedPassword"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginTop="640dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/exposed"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generateNewPassword"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/generateNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatedPassword" />

    <Switch
        android:id="@+id/AZButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="132dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toEndOf="@+id/AZIncludes"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/AZIncludes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="33dp"
        android:text="@string/optionsAZInsert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LengthPassword" />

    <Switch
        android:id="@+id/azButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="164dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AZButton"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/numericButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toEndOf="@+id/numericIncludes"
        app:layout_constraintTop_toBottomOf="@+id/azButton"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/specialCharButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/specialIncludes"
        app:layout_constraintTop_toBottomOf="@+id/numericButton"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageButton
        android:id="@+id/lessSpecialButton"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#3F51B5"
        android:src="@drawable/ic_minus_straight_horizontal_line_sign_svgrepo_com"
        app:icon="@drawable/ic_minus_straight_horizontal_line_sign_svgrepo_com"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lessNumericButtons"
        android:contentDescription="@string/default_text" />

    <TextView
        android:id="@+id/minimuNumericIncludes"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="65dp"
        android:text="@string/minNumChars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialIncludes" />

    <TextView
        android:id="@+id/minimunSpecialIncludes"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/minSpecialChars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minimuNumericIncludes" />

    <TextView
        android:id="@+id/specialIncludes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="19dp"
        android:text="@string/optionsSpecialInsert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numericIncludes" />

    <TextView
        android:id="@+id/numericIncludes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:text="@string/optionsNumericInsert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/azIncludes" />

    <ImageButton
        android:id="@+id/moreSpecialButton"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="#3F51B5"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toStartOf="@+id/lessSpecialButton"
        app:layout_constraintTop_toBottomOf="@+id/moreNumericButtons"
        android:contentDescription="@string/default_text" />

    <TextView
        android:id="@+id/azIncludes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="19dp"
        android:text="@string/optionsazInsert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AZIncludes" />

    <ImageButton
        android:id="@+id/moreNumericButtons"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:background="#3F51B5"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toStartOf="@+id/lessNumericButtons"
        app:layout_constraintTop_toBottomOf="@+id/specialCharButton"
        android:contentDescription="@string/default_text" />

    <ImageButton
        android:id="@+id/lessNumericButtons"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:background="#3F51B5"
        android:src="@drawable/ic_minus_straight_horizontal_line_sign_svgrepo_com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialCharButton"
        android:contentDescription="@string/default_text" />

    <EditText
        android:id="@+id/numNumerical"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/default_zero"
        app:layout_constraintEnd_toStartOf="@+id/moreNumericButtons"
        app:layout_constraintTop_toBottomOf="@+id/specialCharButton" />

    <EditText
        android:id="@+id/numSpecial"
        android:layout_width="39dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/default_zero"
        app:layout_constraintEnd_toStartOf="@+id/moreSpecialButton"
        app:layout_constraintTop_toBottomOf="@+id/numNumerical"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="56dp"
        android:max="42"
        android:min="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LengthPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="260dp"
        android:text="@string/lengthPasswordGenerated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lengthNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="12dp"
        android:text="@string/default_fifteen"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toEndOf="@+id/LengthPassword"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>