<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordInfoFragment">

    <Button
        android:id="@+id/clear_create_inputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/clear"
        android:textColor="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear_create_inputs"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/title_input"
        android:layout_width="286dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:paddingStart="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPass_title"
        tools:ignore="RtlSymmetry"
        android:autofillHints="@string/input_name"
        android:hint="@string/input_name" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="286dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:paddingStart="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints="@string/password"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/url_input"
        android:layout_width="286dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textUri"
        android:lineSpacingExtra="8sp"
        android:paddingStart="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="RtlSymmetry"
        android:autofillHints="@string/url"
        android:hint="@string/url"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/createPass_title"
        android:layout_width="282dp"
        android:layout_height="36dp"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_password_input"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>